Fix compiler for Lombok on Java 17